# Legendrian

./: README.md  legendrian.py  pyproject.toml  test_legendrian.py
auxiliary_data/: grid_atlas.py  link_grid_atlas.py  petkova_atlas.py
