[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legendrian"
version = "0.3.0"
description = "Legendrian knot and link invariants with an OO interface"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
